Fix route  to origin and auton command