@@ -7,33 +7,30 @@
 
 package frc.robot;
 
-import java.util.List;
+import java.util.Collections;
 
+import edu.wpi.first.wpilibj.DriverStation;
 import edu.wpi.first.wpilibj.XboxController;
 import edu.wpi.first.wpilibj.controller.RamseteController;
 import edu.wpi.first.wpilibj.geometry.Pose2d;
 import edu.wpi.first.wpilibj.geometry.Rotation2d;
-import edu.wpi.first.wpilibj.geometry.Translation2d;
+import edu.wpi.first.wpilibj.spline.SplineParameterizer.MalformedSplineException;
 import edu.wpi.first.wpilibj.trajectory.Trajectory;
 import edu.wpi.first.wpilibj.trajectory.TrajectoryConfig;
 import edu.wpi.first.wpilibj.trajectory.TrajectoryGenerator;
 import edu.wpi.first.wpilibj.trajectory.constraint.DifferentialDriveVoltageConstraint;
 import edu.wpi.first.wpilibj2.command.Command;
+import edu.wpi.first.wpilibj2.command.SequentialCommandGroup;
 import edu.wpi.first.wpilibj2.command.button.JoystickButton;
-import frc.robot.commands.test.RouteToOrigin;
+import frc.robot.commands.shooter.Elevator;
+import frc.robot.commands.shooter.Shot;
 import frc.robot.commands.test.Spin;
 import frc.robot.subsystems.DriveSubsystem;
+import frc.robot.subsystems.Shooter;
+import frc.robot.util.JoystickTrigger;
 import frc.robot.util.Ramsete;
 import frc.robot.util.StreamDeck;
 import frc.robot.util.StreamDeckButton;
-
-import edu.wpi.first.wpilibj2.command.ParallelCommandGroup;
-import edu.wpi.first.wpilibj2.command.SequentialCommandGroup;
-import frc.robot.subsystems.Shooter;
-import frc.robot.util.AngleCharacterize;
-import frc.robot.util.JoystickTrigger;
-import frc.robot.commands.shooter.Elevator;
-import frc.robot.commands.shooter.Shot;
 
 public class RobotContainer {
   public static XboxController controller;
@@ -61,8 +58,8 @@ public class RobotContainer {
 
   private void configureButtonBindings() {
 
-    SequentialCommandGroup shootGroup = new SequentialCommandGroup(new Shot(shooter).withTimeout(1.5),
-        new ParallelCommandGroup(new Shot(shooter), new Elevator(shooter)).withTimeout(2));
+    SequentialCommandGroup shootGroup = (new Shot(shooter)).withTimeout(1.5)
+        .andThen(new Shot(shooter).alongWith(new Elevator(shooter)).withTimeout(2));
     // new JoystickButton(controller, XboxController.Button.kA.value).whenPressed(new AngleCharacterize(drive));
     new StreamDeckButton(streamdeck, 0, "arms up").whenPressed(new Spin(drive).withTimeout(1));
     new StreamDeckButton(streamdeck, 1, "intake out").whenPressed(new Spin(drive).withTimeout(1));
@@ -87,49 +84,40 @@ public class RobotContainer {
     JoystickButton buttonA = new JoystickButton(controller, XboxController.Button.kA.value);
     buttonA.whenPressed(shootGroup);
     JoystickButton buttonX = new JoystickButton(controller, XboxController.Button.kX.value);
-    buttonX.whenPressed(new RouteToOrigin(drive));
+    buttonX.whenPressed(this::routeToOrigin);
   }
 
   public Command getAutonomousCommand() {
     final DifferentialDriveVoltageConstraint autoVoltageConstraint = new DifferentialDriveVoltageConstraint(
         Constants.leftFF, drive.kinematics, 10);
     final TrajectoryConfig config = new TrajectoryConfig(Constants.MAX_VELOCITY, Constants.MAX_ACCEL)
-        .setKinematics(drive.getKinematics()).addConstraint(autoVoltageConstraint);
+        .setKinematics(drive.kinematics).addConstraint(autoVoltageConstraint);
     // An example trajectory to follow. All units in meters.
-    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-        // Start at the origin facing the +X direction
-        new Pose2d(0, 0, new Rotation2d(0)),
-        // Pass through these two interior waypoints, making an 's' curve path
-        List.of(new Translation2d(0.25, 1), new Translation2d(2, -1)),
-        // End 3 meters straight ahead of where we started, facing forward
-        new Pose2d(3, 0, new Rotation2d(0)),
-        // Pass config
-        config);
+    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(new Pose2d(0, 0, new Rotation2d()),
+        Collections.emptyList(), new Pose2d(1, 0, new Rotation2d()), config);
 
-    Ramsete ramseteCommand = new Ramsete(trajectory, new RamseteController(Constants.RAMSETE_B, Constants.RAMSETE_ZETA),
-        drive);
+    Trajectory transformed = trajectory.transformBy(drive.getPose().minus(new Pose2d()));
+    Ramsete ramseteCommand = new Ramsete(transformed,
+        new RamseteController(Constants.RAMSETE_B, Constants.RAMSETE_ZETA), drive);
     return ramseteCommand;
   }
 
-  public static Command routeToOrigin() {
+  public void routeToOrigin() {
     final DifferentialDriveVoltageConstraint autoVoltageConstraint = new DifferentialDriveVoltageConstraint(
-        Constants.leftFF, drive.getKinematics(), 10);
+        Constants.leftFF, drive.kinematics, 10);
     final TrajectoryConfig config = new TrajectoryConfig(Constants.MAX_VELOCITY, Constants.MAX_ACCEL)
-        .setKinematics(drive.getKinematics()).addConstraint(autoVoltageConstraint);
-    // An example trajectory to follow. All units in meters.
-    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-        // Start where we are
-        drive.getPose(),
-        // idk if this will work lol but hopefully it does nothing
-        List.of(drive.getPose().getTranslation()),
-        // End at origin
-        new Pose2d(0, 0, new Rotation2d(0)),
-        // Pass config
-        config);
+        .setKinematics(drive.kinematics).addConstraint(autoVoltageConstraint);
 
-    Ramsete ramseteCommand = new Ramsete(trajectory, new RamseteController(Constants.RAMSETE_B, Constants.RAMSETE_ZETA),
-        drive);
-    return ramseteCommand;
+    try {
+      Trajectory trajectory = TrajectoryGenerator.generateTrajectory(drive.getPose(), Collections.emptyList(),
+          new Pose2d(0, 0, new Rotation2d()), config);
+      Ramsete ramseteCommand = new Ramsete(trajectory,
+          new RamseteController(Constants.RAMSETE_B, Constants.RAMSETE_ZETA), drive);
+      ramseteCommand.schedule();
+    } catch (MalformedSplineException e) {
+      DriverStation.reportError("Failed to generate routeToOrigin trajectory", e.getStackTrace());
+    }
+
   }
 
 }
